SONAR-24007 Implement migration tests